--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 :root {
   --salmon-color: hsl(0, 100%, 74%);
-  --placeholder-color: hsl(249, 10%, 26%) ;
+  --placeholder-color: hsl(249, 10%, 26%);
   --white-text-color: hsl(0, 0%, 100%);
   --button-color: hsl(154, 59%, 51%);
   --price-box-color: hsl(248, 32%, 49%);
@@ -65,20 +65,21 @@ body {
   background-color: var(--salmon-color);
   background-image: url("../images/bg-intro-mobile.png");
   line-height: 1.5;
-  padding: 50px 20px;
+  padding: 3.125rem 1.25rem;
 }
 
 h1 {
-  font-size: 1.375rem;
-  font-weight: 700;
+  font-size: 1.625rem;
+  font-weight: 600;
   color: var(--white-text-color);
   text-align: center;
+  margin-top: 1.25em;
 }
 
 .description {
-  font-size: 0.875rem;
   color: var(--white-text-color);
   text-align: center;
+  margin-top: 1.25em;
 }
 
 .price-box {
@@ -86,7 +87,8 @@ h1 {
   border-radius: 10px;
   box-shadow: 0px 8px hsla(248deg, 32%, 49%, 0.3);
   text-align: center;
-  padding: 20px 80px;
+  padding: 1.25em 5em;
+  margin-top: 4.375rem;
 }
 
 .price-box__text {
@@ -97,7 +99,9 @@ h1 {
 form {
   background-color: hsl(0deg, 0%, 100%);
   border-radius: 10px;
-  padding: 20px;
+  box-shadow: 0px 8px hsla(0deg, 40%, 54%, 0.8);
+  padding: 0rem 1.25rem 1.25rem 1.25rem;
+  margin-top: 1.875rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -106,11 +110,22 @@ form {
 
 .form__container {
   list-style-type: none;
+  padding: 0;
+  width: 100%;
+  max-width: 100%;
 }
 
 .form__input-box {
   font-weight: 600;
-  color: var(--placeholder-color);
+  margin-top: 1.25rem;
+}
+
+.form__input {
+  width: 100%;
+  max-width: 100%;
+  padding: 0.938rem;
+  border: 1px solid hsla(249deg, 10%, 26%, 0.3);
+  border-radius: 5px;
 }
 
 .form__submit-btn {
@@ -120,8 +135,9 @@ form {
   background-color: var(--button-color);
   border-radius: 10px;
   border: none;
-  box-shadow: 0px 5px hsla(154deg, 58%, 36%, 0.8);
-  padding: 20px 50px;
+  box-shadow: 0px 5px hsla(154deg, 50%, 45%, 0.8);
+  margin-top: 1.25rem;
+  padding: 0.938em 0em;
   width: 100%;
   max-width: 100%;
 }
@@ -130,6 +146,8 @@ form {
   font-size: 0.75rem;
   text-align: center;
   color: var(--terms-and-service-color);
+  margin-top: 0.938rem;
+  padding: 0em 1.25em;
 }
 
 .form__terms--link {
@@ -141,6 +159,7 @@ form {
 .attribution {
   font-size: 0.688rem;
   text-align: center;
+  margin-top: 1.25rem;
 }
 
 .attribution a {
@@ -154,11 +173,40 @@ form {
 }
 
 /* media queries */
-@media (min-width: 56.25em) {
+/* looks weird after 1440px */
+@media (min-width: 62.5em) {
   body {
     background-image: url(../images/bg-intro-desktop.png);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 10px;
   }
   h1 {
-    font-size: 3.125rem;
+    font-size: 2.813rem;
+    font-weight: 700;
+    text-align: left;
+    margin-top: 0;
+    grid-row: 6/7;
+    grid-column: 2/7;
+  }
+  .description {
+    text-align: left;
+    margin-top: 0;
+    grid-row: 7/8;
+    grid-column: 2/7;
+  }
+  .price-box {
+    margin-top: 0;
+    grid-row: 2/4;
+    grid-column: 8/12;
+  }
+  form {
+    grid-row: 4/11;
+    grid-column: 8/12;
+  }
+  footer {
+    grid-row: 11/12;
+    grid-column: 8/12;
   }
 }/*# sourceMappingURL=styles.css.map */
