--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,11 @@ form {
   border-radius: 5px;
 }
 
+.form__error {
+  font-size: 0.75rem;
+  color: var(--salmon-color);
+}
+
 .form__submit-btn {
   font-weight: 500;
   text-transform: uppercase;
@@ -172,6 +177,21 @@ form {
   background-color: hsl(154deg, 59%, 70%);
 }
 
+.form__input:invalid {
+  border-color: var(--salmon-color);
+}
+
+/*
+  .form__input:invalid::after {
+    content: '!';
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+  }
+
+  or
+  create a span class and hide it initially?
+*/
 /* media queries */
 /* looks weird after 1440px */
 @media (min-width: 62.5em) {
