--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -65,7 +65,7 @@ body {
     padding: 0rem 1.25rem 1.25rem 1.25rem;
     margin-top: 1.875rem;
     max-width: 100%;
-    //width: 80%;
+    width: 100%;
     height: auto;
   }
   
@@ -102,7 +102,6 @@ body {
     padding: 0.938em 0em;
     width: 100%;
     max-width: 100%;
-    max-height: 100%;
   }
   
   .form__terms {
@@ -134,11 +133,11 @@ body {
 
   .form__error {
     font-size: 0.75rem;
+    font-style: italic;
     color: var(--salmon-color);
     max-width: 100%;
     text-align: right;
     padding-top: 10px;
-    position: relative;
   }
 
   .form__err-icon {
@@ -187,6 +186,7 @@ body {
     .signup {
       max-width: 50%;
       padding: 1.875rem;
+      margin-top: 0;
     }
 
     form {
