--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,6 +124,7 @@ form {
   padding: 0rem 1.25rem 1.25rem 1.25rem;
   margin-top: 1.875rem;
   max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -160,7 +161,6 @@ form {
   padding: 0.938em 0em;
   width: 100%;
   max-width: 100%;
-  max-height: 100%;
 }
 
 .form__terms {
@@ -190,11 +190,11 @@ form {
 /* error styles */
 .form__error {
   font-size: 0.75rem;
+  font-style: italic;
   color: var(--salmon-color);
   max-width: 100%;
   text-align: right;
   padding-top: 10px;
-  position: relative;
 }
 
 .form__err-icon {
@@ -234,6 +234,7 @@ form {
   .signup {
     max-width: 50%;
     padding: 1.875rem;
+    margin-top: 0;
   }
   form {
     padding: 1.25rem 2.5rem 2.5rem 2.5rem;
